--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hello world!</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Home{% endblock %}
+{% block content %}
 <h1>Hello {{name}}!</h1>
-</body>
-</html>
+{% endblock %}
