--- a/cities/templates/cities/home.html
+++ b/cities/templates/cities/home.html
@@ -11,4 +11,12 @@
         {% endfor %}
     </div>
 </div>
+<div class="row">
+    <div class="col-md-4">
+        <form action="" method="post"> {% csrf_token %}
+  {{form.as_p}}
+    <input type="submit" value="Submit">
+</form>
+    </div>
+</div>
 {% endblock %}
