--- a/cities/templates/cities/home.html
+++ b/cities/templates/cities/home.html
@@ -3,20 +3,65 @@
 {% block content %}
 <h1>Список городов</h1>
 <div class="row">
-    <div class="col-md">
-        {% for object in objects_list %}
-        <p>
-            <a href="{% url 'cities:detail' pk=object.id %}">{{object.name}}</a>
-            </p>
-        {% endfor %}
+    <div class="col-md-8 my-2">
+        <table class="table table-hover">
+            {% for object in page_obj %}
+            <tr>
+                <td>
+                    <a href="{% url 'cities:detail' pk=object.id %}">{{object.name}}</a>
+                </td>
+                <td>
+                    <a href="{% url 'cities:update' pk=object.id %}">
+                        <button type="submit" class="btn btn-primary">Редактировать</button>
+                    </a>
+                </td>
+                <td>
+                    <a href="{% url 'cities:delete' pk=object.id %}">
+                        <button type="submit" class="btn btn-primary">Удалить</button>
+                    </a>
+                </td>
+            </tr>
+
+
+            {% endfor %}
+        </table>
     </div>
 </div>
+
+<div>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            <li class="page-item">
+                {% if page_obj.has_previous %}
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+                {% endif %}
+
+            </li>
+            {% for page in page_obj.paginator.page_range %}
+            <li class="page-item {% if page == page_obj.number %} active {% endif %}">
+                <a class="page-link" href="?page={{page}}">{{page}}
+                </a>
+            </li>
+            {% endfor %}
+            <li class="page-item">
+                {% if page_obj.has_next %}
+                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+                {% endif %}
+            </li>
+        </ul>
+    </nav>
+</div>
+
 <div class="row">
     <div class="col-md-4">
-        <form action="" method="post"> {% csrf_token %}
-  {{form.as_p}}
-    <input type="submit" value="Submit">
-</form>
+        <form action="{% url 'cities:create' %}" method="post"> {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Submit">
+        </form>
     </div>
 </div>
 {% endblock %}
