--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,33 @@
     </div>
 </nav>
 <div class="container">
+    <div class="row">
+        <div class="col-md-8 mx-auto my-4">
+            {% if messages %}
+
+            {% for message in messages %}
+            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+
+                </button>
+            </div>
+            {% else %}
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+                    
+                </button>
+            </div>
+            {% endif %}
+            {% endfor %}
+
+            {% endif %}
+        </div>
+    </div>
+</div>
+<div class="container">
     {% block content %}{% endblock %}
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
