--- a/cities/templates/cities/home.html
+++ b/cities/templates/cities/home.html
@@ -1,67 +1,62 @@
 {% extends 'base.html' %}
 {% block title %}Список городов{% endblock %}
+
 {% block content %}
 <h1>Список городов</h1>
-<div class="row">
-    <div class="col-md-8 my-2">
-        <table class="table table-hover">
-            {% for object in page_obj %}
+<div class="row ">
+    <div class="col-md-8 mx-auto my-2">
+        <table class="table table-striped">
+        {% for object in page_obj %}
             <tr>
                 <td>
-                    <a href="{% url 'cities:detail' pk=object.id %}">{{object.name}}</a>
+                    <a href="{% url 'cities:detail' pk=object.pk%}">{{object.name}}</a>
                 </td>
+                {% if user.is_authenticated%}
                 <td>
-                    <a href="{% url 'cities:update' pk=object.id %}">
+                    <a href="{% url 'cities:update' pk=object.pk%}">
                         <button type="submit" class="btn btn-primary">Редактировать</button>
                     </a>
                 </td>
                 <td>
-                    <a href="{% url 'cities:delete' pk=object.id %}">
-                        <button type="submit" class="btn btn-primary">Удалить</button>
+                    <a href="{% url 'cities:delete' pk=object.pk%}">
+                        <button type="submit" class="btn btn-danger">Удалить</button>
                     </a>
                 </td>
+                {% else %}
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                {% endif %}
             </tr>
 
 
-            {% endfor %}
+        {% endfor %}
         </table>
     </div>
 </div>
 
-<div>
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-            <li class="page-item">
-                {% if page_obj.has_previous %}
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-                {% endif %}
-
-            </li>
-            {% for page in page_obj.paginator.page_range %}
-            <li class="page-item {% if page == page_obj.number %} active {% endif %}">
-                <a class="page-link" href="?page={{page}}">{{page}}
-                </a>
-            </li>
-            {% endfor %}
-            <li class="page-item">
-                {% if page_obj.has_next %}
-                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-                {% endif %}
-            </li>
-        </ul>
-    </nav>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <form action="{% url 'cities:create' %}" method="post"> {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="Submit">
-        </form>
-    </div>
-</div>
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    <li class="page-item">
+        {% if page_obj.has_previous %}
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            </a>
+        {% endif %}
+    </li>
+    {% for page in page_obj.paginator.page_range %}
+        <li class="page-item {% if page == page_obj.number %} active {% endif %} ">
+            <a class="page-link" href="?page={{page}}">
+                {{ page }}
+            </a>
+        </li>
+    {% endfor %}
+    <li class="page-item">
+        {% if page_obj.has_next %}
+      <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+        {% endif %}
+    </li>
+  </ul>
+</nav>
 {% endblock %}
