--- a/cities/templates/cities/update.html
+++ b/cities/templates/cities/update.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Редактирование города{% endblock %}
 {% block content %}
-<h1>Редактировать города</h1>
+<h1>Редактировать город</h1>
 
 {% include 'form.html' with button='Редактировать' %}
 {% endblock %}
