--- a/routes/templates/routes/list.html
+++ b/routes/templates/routes/list.html
@@ -1,41 +1,25 @@
 {% extends 'base.html' %}
-{% block title %}Список поездов{% endblock %}
+{% block title %}Список маршрутов{% endblock %}
 
 {% block content %}
-<h1>Список поездов</h1>
+<h1>Список маршрутов</h1>
 <div class="row ">
     <div class="col-md-8 mx-auto my-2">
         <table class="table table-striped">
             <tr>
-                <th>Номер</th>
+                <th>Название</th>
                 <th>Откуда</th>
                 <th>Куда</th>
                 <th>Время в пути</th>
-                <th>&nbsp;</th>
-                <th>&nbsp;</th>
             </tr>
         {% for object in page_obj %}
             <tr>
                 <td>
-                    <a href="{% url 'trains:detail' pk=object.pk%}">{{object.name}}</a>
+                    <a href="{% url 'detail' pk=object.pk%}">{{object.name}}</a>
                 </td>
                 <td>{{object.from_city}}</td>
                 <td>{{object.to_city}}</td>
-                <td>{{object.travel_time}}</td>
-                {% if user.is_authenticated%}
-                <td>
-                    <a href="{% url 'trains:update' pk=object.pk%}">
-                        <button type="submit" class="btn btn-primary">Редактировать</button>
-                    </a></td>
-                <td>
-                    <a href="{% url 'trains:delete' pk=object.pk%}">
-                        <button type="submit" class="btn btn-danger">Удалить</button>
-                    </a>
-                </td>
-                {% else %}
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                {% endif %}
+                <td>{{object.travel_times}}</td>
 
             </tr>
 
