--- a/templates/base.html
+++ b/templates/base.html
@@ -2,97 +2,114 @@
 {% url 'cities:create' as cities_create_url %}
 {% url 'trains:home' as trains_home_url %}
 {% url 'trains:create' as trains_create_url %}
-<!DOCTYPE html>
+{% url 'list' as route_list %}
+
+
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
     <title>{% block title %}{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
-</head>
-<body>
-<nav class="navbar navbar-expand-lg " style="background-color: #7B68EE;">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">Sunny</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item {% if request.path == cities_home_url %} active {% endif %}">
-                    <a class="nav-link {% if request.path == cities_home_url %} active {% endif %}" aria-current="page"
-                       href="{% url 'cities:home' %}">Города</a>
-                </li>
-                <li class="nav-item {% if request.path == trains_home_url %} active {% endif %}">
-                    <a class="nav-link {% if request.path == trains_home_url %} active {% endif %}"
-                       href="{% url 'trains:home' %}">Поезда</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Маршруты</a>
-                </li>
-                <li class="nav-item dropdown
-                    {% if request.path == trains_create_url or request.path == cities_create_url %} active {% endif %}">
-                    <a class="nav-link dropdown-toggle {% if request.path == trains_create_url or request.path == cities_create_url %} active {% endif %}"
-                       href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        Добавить
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'cities:create' %}">Новый город</a></li>
-                        <li><a class="dropdown-item" href="{% url 'trains:create' %}">Новый поезд</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<div class="container">
-    <div class="row">
-        <div class="col-md-8 mx-auto my-4">
+  </head>
+  <body>
+      <nav class="navbar navbar-expand-lg navbar-light container" style="background-color: #e3f2fd;">
+      <a class="navbar-brand" href="{% url 'home'%}">Sunny FindRoute</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item {% if request.path == cities_home_url%}active {% endif %}	">
+            <a class="nav-link" href="{% url 'cities:home'%}">Города </a>
+          </li>
+          <li class="nav-item {% if request.path == trains_home_url%}active {% endif %}">
+            <a class="nav-link" href="{% url 'trains:home'%}">Поезда</a>
+          </li>
+          <li class="nav-item
+           {% if request.path == route_list%} active {% endif %}">
+            <a class="nav-link" href="{% url 'list'%}">Маршруты</a>
+          </li>
+          {% if user.is_authenticated%}
+          <li class="nav-item dropdown
+             {% if request.path == cities_create_url or request.path == trains_create_url %}
+              active
+             {% endif %}
+            ">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             Добавить
+            </a>
+
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="{% url 'cities:create'%}">Новый город</a>
+              <a class="dropdown-item" href="{% url 'trains:create'%}">Новый поезд</a>
+            </div>
+
+          </li>
+          {% else %}
+            <li class="nav-item ">
+            <a class="nav-link disabled" href="">Добавить</a>
+          </li>
+            {% endif %}
+          {% if user.is_authenticated%}
+          <li class="nav-item ">
+            <a class="nav-link" href="{% url 'accounts:logout'%}">Выйти</a>
+          </li>
+          {% else %}
+          <li class="nav-item ">
+            <a class="nav-link" href="{% url 'accounts:login'%}">Войти</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="{% url 'accounts:register'%}">Регистрация</a>
+          </li>
+          {% endif %}
+
+        </ul>
+      </div>
+    </nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 mx-auto my-4">
             {% if messages %}
-
-            {% for message in messages %}
-            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                {{ message }}
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-
-                </button>
-            </div>
-            {% else %}
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                {{ message }}
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-
-                </button>
-            </div>
+              {% for message in messages %}
+                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                    <div class="alert alert-danger  alert-dismissible fade show" role="alert">
+                      {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% else %}
+                    <div class="alert alert-success  alert-dismissible fade show" role="alert">
+                      {{ message }}
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                {% endif %}
+              {% endfor %}
             {% endif %}
-            {% endfor %}
-
-            {% endif %}
+          </div>
         </div>
-    </div>
-</div>
-<div class="container">
-    {% block content %}{% endblock %}
-</div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
+      </div>
+      <div class="container">
+        {% block content %}{% endblock %}
+      </div>
 
-<script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+
+  <script>
     $(document).ready(function() {
-    $('.js-example-basic-single').select2();
-    $('.js-example-basic-multiple').select2();
-});
-
-</script>
-</body>
+        $('.js-example-basic-single').select2();
+        $('.js-example-basic-multiple').select2();
+    });
+  </script>
+  </body>
 </html>
